--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <h1>Receitas Brasileiras</h1>
+            <title>Receitas Brasileiras</title>
             <nav>
                 <ul>
                     <li><a href="index.html">Página Inicial</a></li>
@@ -22,20 +22,20 @@
         </header>
         <main>
             <article>
-                <h2>Feijoada</h2>
+                <title> feijoada</title>
                 <p>Descrição da receita da Feijoada...</p>
                 <a href="receita1.html">Ver receita completa</a>
             </article>
             <article>
-                <h2>Moqueca</h2>
+                <title>Moqueca</title>
                 <p>Descrição da receita da Moqueca...</p>
                 <a href="receita2.html">Ver receita completa</a>
             </article>
             <article>
-                <h2>Coxinha</h2>
+                
                 <p>Descrição da receita da Coxinha...</p>
                 <a href="receita3.html">Ver receita completa</a>
-            </article>
+            </article><title>Coxinha</title>
         </main>
         <footer>
             <p>&copy; 2023 Receitas Brasileiras</p>
