--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <title>Receitas Brasileiras</title>
             <nav>
                 <ul>
-                    <li><a href="index.html">Página Inicial</a></li>
-                    <li><a href="receita1.html">Feijoada</a></li>
-                    <li><a href="receita2.html">Moqueca</a></li>
+                    "index.html">Página Inicial
+                    <li><a href="receita1.html">
+                    <li><a href="receita2.html">Moqueca</<h3>Feijoada</h3>a></li>
                     <li><a href="receita3.html">Coxinha</a></li>
                 </ul>
             </nav>
