--- a/index.html
+++ b/index.html
@@ -1,48 +1,125 @@
-<h1>Saúde e Bem estar<h1>
-Página aonde você saberá tudo sobre saude!!!
-
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saúde e Bem-Estar</title>
+    <title>Saúde e Bem-estar</title>
     <style>
+        /* Estilos para o corpo e cabeçalho */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
+            background-color: #f4f4f4;
         }
 
         header {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #333;
+            color: #fff;
+            padding: 15px 0;
             text-align: center;
-            padding: 1rem;
+        }
+
+        header h1 {
+            margin: 0;
         }
 
         nav {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 0.5rem;
+            margin-top: 10px;
         }
 
         nav a {
-            color: white;
-            text-decoration: none;
             margin: 0 15px;
+            text-decoration: none;
+            color: #fff;
         }
 
-        section {
-            padding: 2rem;
+        /* Estilos para a seção principal */
+        .main {
+            padding: 20px;
+            background-color: #fff;
             margin: 20px;
-            background-color: white;
+            border-radius: 5px;
         }
 
+        /* Estilos para o formulário de contato */
+        .contact-form {
+            max-width: 500px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #f9f9f9;
+            border-radius: 5px;
+        }
+
+        .contact-form input[type="text"],
+        .contact-form input[type="email"],
+        .contact-form textarea {
+            width: 100%;
+            margin-bottom: 10px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .contact-form button {
+            background-color: #333;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        /* Estilos para o rodapé */
         footer {
+            text-align: center;
+            padding: 10px 0;
+            background-color: #333;
+            color: #fff;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+
+<body>
+    <header>
+        <div class="container">
+            <h1>Saúde e Bem-estar</h1>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">Artigos</a>
+                <a href="#">Dicas</a>
+                <a href="#">Contato</a>
+            </nav>
+        </div>
+    </header>
+
+    <div class="container main">
+        <h2>Bem-vindo ao nosso site sobre Saúde e Bem-estar!</h2>
+        <p>Encontre artigos úteis, dicas e informações para melhorar sua saúde e bem-estar.</p>
+
+        <div class="contact-form">
+            <h2>Entre em Contato</h2>
+            <form>
+                <input type="text" placeholder="Seu Nome" required><br>
+                <input type="email" placeholder="Seu Email" required><br>
+                <textarea placeholder="Sua Mensagem" rows="5" required></textarea><br>
+                <button type="submit">Enviar Mensagem</button>
+            </form>
+        </div>
+    </div>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2023 Saúde e Bem-estar. Todos os direitos reservados.</p>
+        </div>
+    </footer>
+</body>
+
+</html>
 
     
     
