--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
+
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saúde e Bem-estar</title>
+    <title>Saúde e Bem-Estar</title>
     <style>
-        /* Estilos para o corpo e cabeçalho */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -17,66 +17,31 @@
         header {
             background-color: #333;
             color: #fff;
-            padding: 15px 0;
+            padding: 10px 0;
             text-align: center;
-        }
-
-        header h1 {
-            margin: 0;
         }
 
         nav {
-            margin-top: 10px;
+            background-color: #444;
+            padding: 10px 0;
+            text-align: center;
         }
 
         nav a {
-            margin: 0 15px;
-            text-decoration: none;
             color: #fff;
+            text-decoration: none;
+            margin: 0 15px;
         }
 
-        /* Estilos para a seção principal */
-        .main {
+        section {
             padding: 20px;
-            background-color: #fff;
-            margin: 20px;
-            border-radius: 5px;
         }
 
-        /* Estilos para o formulário de contato */
-        .contact-form {
-            max-width: 500px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #f9f9f9;
-            border-radius: 5px;
-        }
-
-        .contact-form input[type="text"],
-        .contact-form input[type="email"],
-        .contact-form textarea {
-            width: 100%;
-            margin-bottom: 10px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .contact-form button {
+        footer {
             background-color: #333;
             color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        /* Estilos para o rodapé */
-        footer {
             text-align: center;
             padding: 10px 0;
-            background-color: #333;
-            color: #fff;
             position: fixed;
             bottom: 0;
             width: 100%;
@@ -86,40 +51,37 @@
 
 <body>
     <header>
-        <div class="container">
-            <h1>Saúde e Bem-estar</h1>
-            <nav>
-                <a href="#">Home</a>
-                <a href="#">Artigos</a>
-                <a href="#">Dicas</a>
-                <a href="#">Contato</a>
-            </nav>
-        </div>
+        <h1>Saúde e Bem-Estar</h1>
     </header>
 
-    <div class="container main">
-        <h2>Bem-vindo ao nosso site sobre Saúde e Bem-estar!</h2>
-        <p>Encontre artigos úteis, dicas e informações para melhorar sua saúde e bem-estar.</p>
+    <nav>
+        <a href="#dicas">Dicas de Saúde</a>
+        <a href="#exercicios">Exercícios</a>
+        <a href="#receitas">Receitas Saudáveis</a>
+    </nav>
 
-        <div class="contact-form">
-            <h2>Entre em Contato</h2>
-            <form>
-                <input type="text" placeholder="Seu Nome" required><br>
-                <input type="email" placeholder="Seu Email" required><br>
-                <textarea placeholder="Sua Mensagem" rows="5" required></textarea><br>
-                <button type="submit">Enviar Mensagem</button>
-            </form>
-        </div>
-    </div>
+    <section id="dicas">
+        <h2>Dicas de Saúde</h2>
+        <p>Aqui você encontrará dicas úteis para manter uma vida saudável e equilibrada.</p>
+    </section>
+
+    <section id="exercicios">
+        <h2>Exercícios</h2>
+        <p>Descubra diferentes tipos de exercícios para manter seu corpo ativo e saudável.</p>
+    </section>
+
+    <section id="receitas">
+        <h2>Receitas Saudáveis</h2>
+        <p>Explore receitas deliciosas e saudáveis para manter uma dieta equilibrada.</p>
+    </section>
 
     <footer>
-        <div class="container">
-            <p>&copy; 2023 Saúde e Bem-estar. Todos os direitos reservados.</p>
-        </div>
+        <p>&copy; 2023 Saúde e Bem-Estar. Todos os direitos reservados.</p>
     </footer>
 </body>
 
 </html>
+
 
     
     
