--- a/index.html
+++ b/index.html
@@ -53,6 +53,44 @@
     <header>
         <h1>Saúde e Bem-Estar</h1>
     </header>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <title>Dicas de Saúde</title>
+</head>
+<body>
+
+    <header>
+        <h1>Dicas de Saúde</h1>
+        <nav>
+            <ul>
+                <li><a href="#nutricao">Nutrição</a></li>
+                <li><a href="#exercicio">Exercício</a></li>
+                <li><a href="#bem-estar">Bem-estar</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="nutricao">
+            <h2>Nutrição</h2>
+            <p>Aqui estão algumas dicas sobre alimentação saudável...</p>
+        </section>
+
+        <section id="exercicio">
+            <h2>Exercício</h2>
+            <p>Confira algumas orientações sobre prática de exercícios...</p>
+        </section>
+
+        <section id="bem-estar">
+            <h2>Bem-estar</h2>
+            <p>Veja sugestões para manter o equilíbrio emocional e mental...</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Dicas de Saúde</p
 
     <nav>
         <a href="#dicas">Dicas de Saúde</a>
