--- a/index.html
+++ b/index.html
@@ -1,73 +1,45 @@
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saúde e Bem-Estar</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-
-        nav {
-            background-color: #444;
-            padding: 10px 0;
-            text-align: center;
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 15px;
-        }
-
-        section {
-            padding: 20px;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
-</head>
-
-<body>
-    <header>
-        <h1>Saúde e Bem-Estar</h1>
-    </header>
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Dicas de Saúde</title>
+    <title>Saúde e Bem-estar</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            line-height: 1.6;
+        }
+        header {
+            text-align: center;
+            background-color: #f0f0f0;
+            padding: 20px;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+            text-align: center;
+        }
+        nav ul li {
+            display: inline;
+            margin: 0 10px;
+        }
+        main {
+            margin-top: 20px;
+        }
+        section {
+            margin-bottom: 30px;
+        }
+    </style>
 </head>
 <body>
 
     <header>
-        <h1>Dicas de Saúde</h1>
+        <h1>Dicas de Saúde e Bem-estar</h1>
         <nav>
             <ul>
                 <li><a href="#nutricao">Nutrição</a></li>
                 <li><a href="#exercicio">Exercício</a></li>
-                <li><a href="#bem-estar">Bem-estar</a></li>
+                <li><a href="#mental">Saúde Mental</a></li>
             </ul>
         </nav>
     </header>
@@ -75,50 +47,27 @@
     <main>
         <section id="nutricao">
             <h2>Nutrição</h2>
-            <p>Aqui estão algumas dicas sobre alimentação saudável...</p>
+            <p>Manter uma dieta equilibrada e rica em nutrientes é essencial para uma vida saudável. Consuma uma variedade de frutas, vegetais, proteínas magras e grãos integrais.</p>
         </section>
 
         <section id="exercicio">
             <h2>Exercício</h2>
-            <p>Confira algumas orientações sobre prática de exercícios...</p>
+            <p>A prática regular de atividade física fortalece o corpo e a mente. Recomenda-se ao menos 30 minutos de exercícios aeróbicos diários.</p>
         </section>
 
-        <section id="bem-estar">
-            <h2>Bem-estar</h2>
-            <p>Veja sugestões para manter o equilíbrio emocional e mental...</p>
+        <section id="mental">
+            <h2>Saúde Mental</h2>
+            <p>O bem-estar mental é crucial. Reserve tempo para relaxar, pratique meditação, respire profundamente e mantenha relações sociais saudáveis.</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 Dicas de Saúde</p
-
-    <nav>
-        <a href="#dicas">Dicas de Saúde</a>
-        <a href="#exercicios">Exercícios</a>
-        <a href="#receitas">Receitas Saudáveis</a>
-    </nav>
-
-    <section id="dicas">
-        <h2>Dicas de Saúde</h2>
-        <p>Aqui você encontrará dicas úteis para manter uma vida saudável e equilibrada.</p>
-    </section>
-
-    <section id="exercicios">
-        <h2>Exercícios</h2>
-        <p>Descubra diferentes tipos de exercícios para manter seu corpo ativo e saudável.</p>
-    </section>
-
-    <section id="receitas">
-        <h2>Receitas Saudáveis</h2>
-        <p>Explore receitas deliciosas e saudáveis para manter uma dieta equilibrada.</p>
-    </section>
-
-    <footer>
-        <p>&copy; 2023 Saúde e Bem-Estar. Todos os direitos reservados.</p>
+        <p>&copy; 2023 Dicas de Saúde e Bem-estar</p>
     </footer>
-</body>
 
+</body>
 </html>
+
 
 
     
