--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Saúde e Bem-estar</title>
     <style>
         body {
+       background-image: url
+            background-size: cover;
+            background-repeat: no-repet; 
+
             font-family: Arial, sans-serif;
             margin: 20px;
             line-height: 1.6;
