--- a/index.html
+++ b/index.html
@@ -3,7 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Saúde e Bem-estar</title>
-    <style>
+
+    <body>
+    <!DOCTYPE html>
+    <html>
+    <head>
+        <title>Minha Página com Fundo de Imagem</title>
+        <style>
+            body {
+                background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20210923/pngtree-health-care-light-blue-light-shadow-cross-abstract-background-image_904158.png");
+                background-size: cover;
+                background-repeat: no-repeat;
+            }
+        </style>
+    </head>
+     </body>
+    <body>
+        <h1>Minha Página com Fundo de Imagem</h1>
+        <p>Este é o conteúdo da minha página.</p>
+    </body>
+    </html>
+
+    <style> 
         body {
        background-image: url
             background-size: cover;
